crates/parser/src/snapshots/parser__tests__parse_inline_ok@0157_prefix_match.ath.snap
---
source: crates/parser/src/tests.rs
description: "(match foo (A B) (C D))\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0157_prefix_match.ath
---
PREFIX_MATCH_EXPR
  L_PAREN "("
  MATCH_KW "match"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "foo"
  WHITESPACE " "
  MATCH_CLAUSE
    L_PAREN "("
    IDENT_PAT
      NAME
        IDENT "A"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "B"
    R_PAREN ")"
  WHITESPACE " "
  MATCH_CLAUSE
    L_PAREN "("
    IDENT_PAT
      NAME
        IDENT "C"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "D"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

