crates/parser/src/snapshots/parser__tests__parse_inline_ok@0159_infix_expand_input_dir.ath.snap
---
source: crates/parser/src/tests.rs
description: "expand-input foo, bar, baz [nat->int]\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0159_infix_expand_input_dir.ath
---
EXPAND_INPUT_DIR
  EXPAND_INPUT_KW "expand-input"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "foo"
  COMMA ","
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "bar"
  COMMA ","
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "baz"
  WHITESPACE " "
  EXPR_PHRASE
    LIST_EXPR
      L_BRACK "["
      EXPR_PHRASE
        IDENT_EXPR
          NAME_REF
            IDENT "nat->int"
      R_BRACK "]"
  WHITESPACE "\n"

