crates/parser/src/snapshots/parser__tests__parse_inline_ok@0160_define_sort_dir.ath.snap
---
source: crates/parser/src/tests.rs
description: "define-sort Foo := Int\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0160_define_sort_dir.ath
---
DEFINE_SORT_DIR
  DEFINE_SORT_KW "define-sort"
  WHITESPACE " "
  IDENTIFIER
    IDENT "Foo"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "Int"
  WHITESPACE "\n"

