crates/parser/src/snapshots/parser__tests__parse_inline_ok@0160_named_pat_bind_in_middle.ath.snap
---
source: crates/parser/src/tests.rs
description: "(foo bind bar)\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0160_named_pat_bind_in_middle.ath
---
NAMED_PAT
  L_PAREN "("
  NAME
    IDENT "foo"
  WHITESPACE " "
  BIND_KW "bind"
  WHITESPACE " "
  IDENT_PAT
    NAME
      IDENT "bar"
  R_PAREN ")"
  WHITESPACE "\n"

