crates/parser/src/snapshots/parser__tests__parse_inline_ok@0161_named_pat_as_start.ath.snap
---
source: crates/parser/src/tests.rs
description: "(as foo bar)\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0161_named_pat_as_start.ath
---
NAMED_PAT
  L_PAREN "("
  AS_KW "as"
  WHITESPACE " "
  NAME
    IDENT "foo"
  WHITESPACE " "
  IDENT_PAT
    NAME
      IDENT "bar"
  R_PAREN ")"
  WHITESPACE "\n"

