crates/parser/src/snapshots/parser__tests__parse_inline_ok@0162_prefix_define_blocks.ath.snap
---
source: crates/parser/src/tests.rs
description: "(define (foo a b) := a (foo b c) := b)\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0162_prefix_define_blocks.ath
---
PREFIX_DEFINE_BLOCKS
  L_PAREN "("
  DEFINE_KW "define"
  WHITESPACE " "
  PREFIX_DEFINE_BLOCK
    DEFINE_PROC
      L_PAREN "("
      NAME
        IDENT "foo"
      WHITESPACE " "
      NAME
        IDENT "a"
      WHITESPACE " "
      NAME
        IDENT "b"
      R_PAREN ")"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "a"
  WHITESPACE " "
  PREFIX_DEFINE_BLOCK
    DEFINE_PROC
      L_PAREN "("
      NAME
        IDENT "foo"
      WHITESPACE " "
      NAME
        IDENT "b"
      WHITESPACE " "
      NAME
        IDENT "c"
      R_PAREN ")"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "b"
  R_PAREN ")"
  WHITESPACE "\n"

