crates/parser/src/snapshots/parser__tests__parse_inline_ok@0166_load_prefix.ath.snap
---
source: crates/parser/src/tests.rs
description: "(load \"list.ath\")\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0166_load_prefix.ath
---
LOAD_DIR
  L_PAREN "("
  LOAD_KW "load"
  WHITESPACE " "
  STRING "\"list.ath\""
  R_PAREN ")"
  WHITESPACE "\n"

